--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     {
       "type": "pwa-msedge",
       "request": "launch",
-      "name": "Ouvrir Bar.htm sur Edge (GitHub Pages)",
+      "name": "Ouvrir OneStaller sur Edge (GitHub Pages)",
       "url": "https://mat-services.github.io/One-Staller/"
     }
   ]
