--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "type": "pwa-msedge",
       "request": "launch",
       "name": "Ouvrir OneStaller sur Edge (GitHub Pages)",
-      "url": "https://mat-services.github.io/One-Staller/"
+      "url": "https://mat-services.github.io/OneStaller/"
     }
   ]
 }
